--- a/pioneer/pioneer_controller/src/mainUI.ui
+++ b/pioneer/pioneer_controller/src/mainUI.ui
@@ -29,29 +29,39 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Batery</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout">
            <item>
             <widget class="QLCDNumber" name="lcdNumber_bat"/>
            </item>
-           <item>
-            <widget class="QLabel" name="label">
-             <property name="text">
-              <string>Bat</string>
-             </property>
-            </widget>
-           </item>
           </layout>
          </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_stop">
-           <property name="text">
-            <string>Stop</string>
-           </property>
-          </widget>
-         </item>
         </layout>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Connexion</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLCDNumber" name="con"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_stop">
+         <property name="text">
+          <string>Stop</string>
+         </property>
+        </widget>
        </item>
        <item>
         <spacer name="verticalSpacer">
