--- a/pioneer/pioneer_controller/src/mainUI.ui
+++ b/pioneer/pioneer_controller/src/mainUI.ui
@@ -21,6 +21,12 @@
      </property>
      <widget class="QGraphicsView" name="graphicsView"/>
      <widget class="QFrame" name="frame_2">
+      <property name="maximumSize">
+       <size>
+        <width>120</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -40,7 +46,14 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout">
            <item>
-            <widget class="QLCDNumber" name="lcdNumber_bat"/>
+            <widget class="QLCDNumber" name="lcdNumber_bat">
+             <property name="font">
+              <font>
+               <pointsize>12</pointsize>
+               <strikeout>true</strikeout>
+              </font>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -54,7 +67,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QLCDNumber" name="con"/>
+        <widget class="QLCDNumber" name="con">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+           <strikeout>true</strikeout>
+          </font>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_stop">
@@ -80,6 +100,12 @@
      </widget>
      <widget class="QLabel" name="label_rgb">
       <property name="minimumSize">
+       <size>
+        <width>640</width>
+        <height>480</height>
+       </size>
+      </property>
+      <property name="maximumSize">
        <size>
         <width>640</width>
         <height>480</height>
