--- a/pioneer/pioneer_controller/src/mainUI.ui
+++ b/pioneer/pioneer_controller/src/mainUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>901</width>
-    <height>572</height>
+    <width>1301</width>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,18 +32,21 @@
        <widget class="QLabel" name="label_rgb">
         <property name="minimumSize">
          <size>
-          <width>640</width>
-          <height>480</height>
+          <width>1024</width>
+          <height>512</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>640</width>
-          <height>480</height>
+          <width>1024</width>
+          <height>512</height>
          </size>
         </property>
         <property name="text">
          <string>TextLabel</string>
+        </property>
+        <property name="margin">
+         <number>1</number>
         </property>
        </widget>
       </widget>
